# hive

./: quickstart.sh
.claude/skills/building-agents-construction/: SKILL.md
.claude/skills/building-agents-construction/examples/online_research_agent/: agent.py
.claude/skills/hive-create/: SKILL.md
.claude/skills/hive-create/examples/deep_research_agent/: config.py
.claude/skills/hive-credentials/: SKILL.md
core/: pyproject.toml
core/examples/: mcp_integration_example.py
core/framework/credentials/: models.py  provider.py  storage.py  store.py  template.py
core/framework/credentials/aden/: client.py
core/framework/credentials/oauth2/: base_provider.py  lifecycle.py  provider.py
core/framework/credentials/tests/: test_credential_store.py
core/framework/credentials/vault/: hashicorp.py
core/framework/runner/: cli.py  runner.py
core/framework/storage/: concurrent.py
core/framework/tui/widgets/: chat_repl.py
core/tests/: test_output_cleaner_live.py
docs/: roadmap.md
examples/templates/deep_research_agent/: agent.py
examples/templates/tech_news_reporter/: agent.py  config.py
examples/templates/twitter_outreach/: agent.py  config.py
tools/src/aden_tools/credentials/: __init__.py  store_adapter.py  x.py
tools/src/aden_tools/tools/: __init__.py
tools/src/aden_tools/tools/x_tool/: README.md  __init__.py  x_tool.py
tools/src/aden_tools/tools/x_tool/test/: test_x_credentials.py  test_x_tool.py
tools/tests/: test_credentials.py
tools/tests/tools/: test_x_tool.py
